# pydantic-settings-vault

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mise.toml  pyproject.toml
.github/workflows/: release.yml  test.yml
src/pydantic_vault/: __init__.py  entities.py  vault_settings.py
tests/: test_get_vault_client.py  test_settings_source.py
