[project]
name = "pydantic-settings-vault"
version = "2.1.1"
description = "A simple extension to pydantic-settings that can retrieve secrets from Hashicorp Vault"
authors = [
  { name = "Aleksey Petrunnik", email = "petrunnik.a@gmail.com" },
  { name = "Thomas Gaudin", email = "thomas.gaudin@centraliens-lille.org" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["hashicorp", "vault", "hvac", "pydantic"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
  "Topic :: Security",
]
dependencies = [
  "pydantic>=2.1.1,<3",
  "pydantic-settings>=2.0.2,<3",
  "hvac>=0.10.6",
]

[project.urls]
Repository = "https://github.com/aleksey925/pydantic-settings-vault/"
Documentation = "https://github.com/aleksey925/pydantic-settings-vault/"
"Bug Tracker" = "https://github.com/aleksey925/pydantic-settings-vault/issues"
Changelog = "https://github.com/aleksey925/pydantic-settings-vault/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
  "mypy>=1.9.0",
  "pytest>=7.4.0",
  "pytest-mock>=3.14.0",
  "pytest-cov>=5.0.0",
  "pyfakefs>=5.8.0",
  "pre-commit>=4.5.0",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/pydantic_vault"]

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_vault"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "A",       # flake8-builtins
  "E",       # pycodestyle errors
  "W",       # pycodestyle warnings
  "F",       # pyflakes
  "I",       # isort
  "N",       # pep8-naming
  "T20",     # flake8-print
  "C90",     # flake8-complexity (mccabe)
  "UP",      # pyupgrade
  "RUF",     # ruff
  "S",       # flake8-bandit
  "PLC0415", # import-outside-top-level
]
ignore = [
  "E501", # line too long, handled by formatter
  "A003", # class attribute {name} is shadowing a python builtin
  "S101", # use of assert detected
  "N818", # exception names should be named with an "Error" suffix
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]  # hardcoded passwords are fine in tests

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
show_error_codes = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "hvac.*"
ignore_missing_imports = true
